@@ -82,7 +82,7 @@ perk.desc.miner.2=Quando scavi un minerale, tutti i_minerali adiacenti vengono s
 perk.desc.miner.3=Ti permette di individuare minerali dietro le pareti._Accovacciati con un piccone in mano per vedere
 perk.desc.miner.4=Quando scavi hai sempre un po di fortuna
 perk.desc.miner.5=Tutta la ghiaia si spacca quando scavi_Puoi filtrare i tipi di blocchi che raccogli._I blocchi filtrati vengono distrutti invece che raccolti._Considera i metadati, ignora dati NBT
-perk.desc.miner.6=Hai sempre con te una fornace e una tavola da lavoro_Ti permette di usare un rampino 
+perk.desc.miner.6=Hai sempre con te una fornace e una tavola da lavoro_Ti permette di usare un rampino._Clicca col destro per lanciare, accucciati per annullare
 
 perk.builder.1=Braccia Lunghe
 perk.builder.2=Mani di Fata
